<resources>
    <string name="app_name">Kuźnia Bohaterów</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="regulamin"><a href="https://www.youtube.com/">regulamin.com</a></string>
    <string name="title_activity_reset_hasla">ResetHasla</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="logowanie">Logowanie</string>
    <string name="cofnij">Cofnij</string>
    <string name="szukaj">Szukaj</string>
    <string name="imie">Imie</string>
    <string name="zawod">Zawód</string>
    <string name="Statystyka">Statystyka</string>
    <string name="Wartość">Wartość</string>
    <string name="Siła">Siła</string>
    <string name="Kondycja">Kondycja</string>
    <string name="BudowaCiała">Budowa Ciała</string>
    <string name="Zręczność">Zręczność</string>
    <string name="Inteligencja">Inteligencja</string>
    <string name="Moc">Moc</string>
    <string name="Wykształcenie">Wykształcenie</string>
    <string name="Poczytalność">Poczytalność</string>
    <string name="Wygląd">Wygląd</string>
    <string name="Dodaj">Dodaj</string>
    <string name="Nazwa">Nazwa:</string>
    <string name="Wartosc">Wartość:</string>
    <string name="Opis">Opis:</string>
    <string name="NazwaStołu">Nazwa stołu:</string>
    <string name="OpisStołu">Opis stołu:</string>
    <string name="NazwaZaklęcia">Nazwa zaklęcia:</string>
    <string name="Koszt">Koszt:</string>
    <string name="ZmieńNazwe">Zmień nazwe</string>
    <string name="ZmienOpis">Zmień opis</string>
    <string name="UsunStol">Usuń stół</string>
    <string name="Wyloguj">Wyloguj</string>
    <string name="TrybGracz">Tryb Gracz</string>
    <string name="Kalendarz">Kalendarz</string>
    <string name="StwórzPostać">Stwórz postać</string>
    <string name="DołaczDoStołu">Dołacz do stołu</string>
    <string name="ListaStołów">Lista stołów</string>
    <string name="StwórzStol">Stwórz nowy stół</string>
    <string name="RozwińPostać">Rozwiń Postać</string>
    <string name="UsuńPostać">Usuń Postać</string>
    <string name="Ekwipunek">Ekwipunek</string>
    <string name="Historia">Historia</string>
    <string name="Zaklęcia">Zaklęcia</string>
    <string name="Notatki">Notatki</string>
    <string name="Zapisz">Zapisz</string>
    <string name="HISTORIA">HISTORIA</string>
    <string name="NoMeeting">Nie masz ustalonego spotkania</string>
    <string name="SetSpotkanie">Ustal Spotkanie</string>
    <string name="ZapiszTermin">Zapisz termin</string>
    <string name="Email">Email:</string>
    <string name="Hasło">Hasło:</string>
    <string name="PrzywróćHasło">Przywróć Hasło</string>
    <string name="ZałóżKonto">Załóż konto</string>
    <string name="NOTATKI">NOTATKI</string>
    <string name="Regulamin">Regulamin</string>
    <string name="Nick">Nick</string>
    <string name="haslo2">Powtórz Hasło</string>
    <string name="accregulamin">Zaakceptuj regulamin</string>
    <string name="Wyślij">Wyślij</string>
    <string name="Statystyki">Statystyki</string>
    <string name="ZmieńPostać">Zmień postać</string>
    <string name="KodZaproszenia">Kod zaproszenia</string>
    <string name="Archiwum">Archiwum</string>
    <string name="Profesja">Profesja</string>
    <string name="Wylosuj">Wylosuj</string>
    <string name="RzutKostką">Rzut kostką</string>
    <string name="Wynik">Wynik</string>
    <string name="LosujWszystko">Losuj Wszystko</string>
    <string name="ZmienPostać">ZmieńPostać</string>
    <string name="TrybMG">Tryb MG</string>
    <string name="WyszukajPostac">Wyszukaj postać</string>
    <string name="WystapilBlad">"Wystąpił błąd w następujących polach:"</string>
    <string name="WprowadzNick">"Wprowadź nick"</string>
    <string name="BlednyAdres">"Błędny adres email"</string>
    <string name="WprowadzHaslo">"Wprowadź hasło"</string>
    <string name="WprowadzPonownieHaslo">"Wprowadź ponownie haslo"</string>
    <string name="HaslaTakieSame">"Hasła nie są takie same"</string>
    <string name="WCelu">"W celu utworzenia konta wymagana jest akceptacja regulaminu"</string>
    <string name="HaslaWieksze">"Hasło powinno mieć więcej niż 6 znaków"</string>
    <string name="HasloZbyt">"Hasło jest zbyt długie"</string>
    <string name="ZalozoneKonto">"Konto zostało założone w serwisie"</string>
    <string name="WprowadzEmail">"Wprowadź adres email"</string>
    <string name="PoprawnieZalogowano">"Poprawnie zalogowano sie do systemu"</string>
    <string name="WystapilBladPodczasLogowania">"Wystąpił błąd podczas logowania. Użytkownik nie istnieje lub podane dane są błędne"</string>
    <string name="JestesNaLiscie">"Jesteś na liście zablokowanych na tym stole. Gracze na tym stole nie potrzebują cię w swoim składzie."</string>
    <string name="WprowadzKod">"Wprowadź kod!"</string>
    <string name="JestesMistrzem">"Jesteś Mistrzem Gry tego stołu. Nie możesz dołączyć."</string>
    <string name="JestesNaStole">"Jesteś już na tym stole."</string>
    <string name="NieZnaleziono">"Nie znaleziono kodu lub stół nie istnieje."</string>
    <string name="PoprawnieWylogowano">"Poprawnie wylogowano sie z systemu"</string>
    <string name="PoprawnieWybranoPostac">"Poprawnie wybrano postać"</string>
    <string name="BrakDodanego">"Brak dodanego zdjęcia postaci"</string>
    <string name="StworzonoPostac">"Pomyślnie stworzono postać"</string>
    <string name="WprowadzWiadomosc">"Wprowadź wiadomość"</string>
    <string name="d4">"Użytkownik rzucił d4 i wylosował "</string>
    <string name="d6">"Użytkownik rzucił d6 i wylosował "</string>
    <string name="d8">"Użytkownik rzucił d8 i wylosował "</string>
    <string name="d10">"Użytkownik rzucił d10 i wylosował "</string>
    <string name="d12">"Użytkownik rzucił d12 i wylosował "</string>
    <string name="d20">"Użytkownik rzucił d20 i wylosował "</string>
    <string name="d100">"Użytkownik rzucił d100 i wylosował "</string>
    <string name="BrakWybranejPostaci">"Brak wybranej postaci"</string>
    <string name="GraczNieWybral">"Gracz nie wybrał postaci!"</string>
    <string name="PoprawnieEdytowano">"Poprawnie edytowano postać"</string>
    <string name="BladPodczas">"Błąd podczas wprowadzania danych!"</string>
    <string name="JezeliDane">"Jeżeli dane konto istnienieje na podany adres została wysłana wiadomość z instrukcją resetu hasła"</string>
    <string name="PoprawnieEdytowanoNotatke">"Poprawnie edytowano notatki"</string>
    <string name="PoprawnieUsunietoPrzedmiot">"Poprawnie usunięto przedmiot"</string>
    <string name="WystapilBladPrzyUsuwaniuPrzedmiotu">"Wystąpił błąd przy usuwaniu przedmiotu"</string>
    <string name="NastepneSpotkanie">"Następne spotkanie odbędzie sie: "</string>
    <string name="BlednaGodzina">"Błędna godzina"</string>
    <string name="PoprawnieDodanoSpotkanie">"Poprawnie dodano spotkanie"</string>
    <string name="PoprawnieEdytowanoHistorie">"Poprawnie edytowano historie"</string>
    <string name="PoprawnieUsunietoPostac">"Poprawnie usunięto postać"</string>
    <string name="WystapilBladPrzyUsuwaniuPostaci">"Wystąpił błąd przy usuwaniu postaci"</string>
    <string name="PoprawnieUsunietoStol">"Poprawnie usunięto stół"</string>
    <string name="WystapilBladPodczasUsuwaniuStolu">"Wystąpił błąd przy usuwaniu stołu!</string>
    <string name="PoprawnieZmienionoNazweStolu">"Poprawnie zmieniono nazwę stołu."</string>
    <string name="PoprawnieZmienionoOpisStolu">"Poprawnie zmieniono opis stołu."</string>
    <string name="WprowadzNazZak">"Wprowadź nazwę zaklęcia"</string>
    <string name="WprowadzKoszZak">"Wprowadź koszt zaklęcia"</string>
    <string name="WprowadzOpisZak">"Wprowadź opis zaklęcia"</string>
    <string name="WprowadzPoprNumer">"Wprowadź poprawny numer w koszcie"</string>
    <string name="PoprawnieDodanoZaklecie">"Poprawnie dodano zaklęcie."</string>
    <string name="WprowadzNazweStolu">"Wprowadź nazwę stolu"</string>
    <string name="WprowadzOpisStolu">"Wprowadź opis stolu"</string>
    <string name="PoprawnieDodanoStol">"Poprawnie dodano stół."</string>
    <string name="WprowadzNazwePrzedmiotu">"Wprowadź nazwę przedmiotu"</string>
    <string name="WprowadzKosztPrzedmiotu">"Wprowadź koszt przedmiotu"</string>
    <string name="WprowadzOpisPrzedmiotu">"Wprowadź opis przedmiotu"</string>
    <string name="WprowadzPoprawnyNumer">"Wprowadź poprawny numer w koszcie"</string>
    <string name="PoprawnieDodanoPrzedmiot">"Poprawnie dodano przedmiot."</string>
    <string name="EdytujStol">Edytuj stół</string>
    <string name="WybierzPostac">Wybierz postać</string>
    <string name="InstrukcjaObslugi">Instrukcja obsługi</string>
    <string name="Usun">Usuń</string>
    <string name="WyrzucGracza">Wyrzuć gracza</string>
    <string name="StolUsuniety">"Stół został usunięty!"</string>
    <string name="ZostalesWyrzucony">"Zostałeś wyrzucony!"</string>
    <string name="OdbanujGracza">"Odbanuj użytkownika"</string>
    <string name="WystapilBladPodczasWyrzucaniaGracza">"Wystąpił błąd podczas wyrzucania gracza"</string>
    <string name="PoprawnieWyrzuconoZeStolu">"Poprawnie wyrzucono gracza ze stołu"</string>
    <string name="WystapilBladPodczasOdbanowywaniaGracza">"Wystąpił błąd podczas odbanowywania gracza!"</string>
    <string name="PoprawnieOdbanowano">"Poprawnie odbanowano!"</string>
    <string name="NazwaInstrukcja">Instrukcja Obsługi wybierz rozdział</string>
    <string name="Rozdzial1">1. Rejestracja</string>
    <string name="Rozdzial2">2. Logowanie</string>
    <string name="Rozdzial3">3. Wyloguj</string>
    <string name="Rozdzial4">4. Kalendarz</string>
    <string name="Rozdzial5">5. Stwórz postać</string>
    <string name="Rozdzial6">6. Dołącz do stołu</string>
    <string name="Rozdzial7">7. Lista stołów</string>
    <string name="Rozdzial8">8. Wyszukaj postać</string>
    <string name="Rozdzial9">9. Tryb gracza/MG</string>
    <string name="Rozdzial10">10. Stwórz nowy stół</string>
    <string name="Rozdzial11">11. Stół</string>
    <string name="Rozdzial1t">W celu korzystania z funkcjonalności aplikacji, użytkownik musi założyć konto. Po naciśnięciu przycisku „Rejestracja”, zostanie wyświetlony formularz. W celu poprawnego konta wymagana jest akceptacja regulaminu. Można go wyświetlić korzystając z przycisku obok. </string>
    <string name="Rozdzial2t">Wyświetla formularz z danymi do zalogowania się. W razie problemów z poprawnym logowaniem, użytkownik ma opcję resetu hasła. W takim wypadku na jego mail zostanie przesłany link w możliwością ustawienia nowego hasła.  </string>
    <string name="Rozdzial3t">Gracz ma możliwość wylogowania się z systemu w razie potrzeby. </string>
    <string name="Rozdzial4t">W celu ułatwienia życia, każdy z graczu może ustalić termin najbliższego spotkania.  </string>
</resources>