<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/postacb"
    tools:context=".EkranPostaci">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/CPAvatarImage"
                android:layout_width="150dp"
                android:layout_height="85dp"
                android:layout_margin="5dp"
                tools:srcCompat="@drawable/rameczka" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CPTextImie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#94261309"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/imie"
                    android:textColor="#ebebeb"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/CPTextZawod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="#94261309"
                    android:fontFamily="@font/gabriela"
                    android:text="@string/zawod"
                    android:textColor="#ebebeb"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/OpisNaStatystyki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/gabriela"
                android:text="@string/Statystyka"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/gabriela"
                android:text="@string/Wartość"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutSila"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/gabriela"
                android:text="@string/Siła"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaSila"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutKondycja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/gabriela"
                android:text="@string/Kondycja"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaKondycja"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutBudowaCiala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/BudowaCiała"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaBudowaCiala"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutZrecznosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/Zręczność"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaZrecznosc"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutInteligecja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/Inteligencja"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaInteligencja"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutMoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/Moc"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaMoc"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutWyksztalcenie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/Wykształcenie"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaWyksztalcenie"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutPoczytalnosc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView41"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/Poczytalność"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaPoczytalnosc"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/CPLayoutWyglad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#94261309"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="@string/Wygląd"
                android:textColor="#ebebeb"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/CPLiczbaWyglad"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gabriela"
                android:text="50"
                android:textColor="#ebebeb"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CPButtonPowrot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/przycisknaprzyciski"
                android:fontFamily="@font/gabriela"
                android:text="@string/cofnij"
                android:textColor="#ebebeb" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>